--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -3,7 +3,7 @@
     <div class="container">
         <nav class="header-nav">
             <div>
-                <a href="/" class="header-icon">
+                <a href="./index.html" class="header-icon">
                     <svg class="icon-film" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
