--- a/src/templates/modalStudents.hbs
+++ b/src/templates/modalStudents.hbs
@@ -1,13 +1,11 @@
 <div class="py-5 team3 bg-light">
-    <div class="container">
+    <div>
         <div class="row justify-content-center mb-4">
             <div class="col-md-7 text-center">
-                <h3 class="mb-3">Experienced & Professional Team</h3>
-                <h6 class="subtitle font-weight-normal">You can relay on our amazing features list and also our customer
-                    services will be great experience for you without doubt and in no-time</h6>
+                <h3 class="mb-3">Our Dream Team</h3>
             </div>
         </div>
-        <div class="row">
+        <div class="row-container">
             <!-- column  -->
             <div class="col-lg-4 mb-4">
                 <!-- Row -->
@@ -19,9 +17,10 @@
                         <div class="pt-2">
                             <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
                             <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link" href="https://github.com/Mariia996">GitHub</a></p>
+                            <div class="text-box">
+                                <p><a href="mailto:masha.gunko96@gmail.com" class="student-email link">E-MAIL</a></p>
+                                <p><a class="student-github link" href="https://github.com/Mariia996">GitHub</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -39,9 +38,9 @@
                         <div class="pt-2">
                             <h5 class="mt-4 font-weight-medium mb-0">Sasha</h5>
                             <h6 class="subtitle">"Need hugs"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
+                            <p><a href="mailto:protsenko.as@gmail.com"
                                     class="student-email link">protsenko.as@gmail.com</a></p>
-                            <p><a class="student-github link" href="https://github.com/Mariia996">GitHub</a></p>
+                            <p><a class="student-github link" href="https://github.com/SashaPro2021">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -53,16 +52,16 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Marina.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Marina</h5>
+                            <h6 class="subtitle">"Local Storage Monster"</h6>
+                            <p><a href="mailto:marinacat2108@gmail.com"
+                                    class="student-email link">marinacat2108@gmail.com</a>
+                            </p>
+                            <p><a class="student-github link" href="https://github.com/MarinaKarabut">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -73,16 +72,15 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Maks1.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Maks</h5>
+                            <h6 class="subtitle">"Team Heart"</h6>
+                            <p><a href="mailto:m.shipovskiy@gmail.com"
+                                    class="student-email link">m.shipovskiy@gmail.com</a></p>
+                            <p><a class="student-github link" href="https://github.com/zurab5550">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -92,16 +90,16 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Fahriddin.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Fahriddin</h5>
+                            <h6 class="subtitle">"The Best Modal Maker"</h6>
+                            <p><a href="mailto:fahriddinnomanjanov@gmail.com"
+                                    class="student-email link">fahriddinnomanjanov@gmail.com</a></p>
+                            <p><a class="student-github link" href="https://github.com/fahriddinnomanjanov">GitHub</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -111,16 +109,15 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Akbar.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Akbar</h5>
+                            <h6 class="subtitle">"Pagination Guru"</h6>
+                            <p><a href="mailto:k.akbar1101@gmail.com"
+                                    class="student-email link">k.akbar1101@gmail.com</a></p>
+                            <p><a class="student-github link" href="https://github.com/kadyrov11">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -130,16 +127,15 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Hezalek.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Danilo</h5>
+                            <h6 class="subtitle">"Ronaldo"</h6>
+                            <p><a href="mailto:danilka4412@gmail.com"
+                                    class="student-email link">danilka4412@gmail.com</a></p>
+                            <p><a class="student-github link" href="https://github.com/danielnedefo">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -149,16 +145,14 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Bogdan.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Bogdan</h5>
+                            <h6 class="subtitle">"Lord of Darkness"</h6>
+                            <p>Senior Full-Stack Developer</p>
+                            <p><a class="student-github link" href="https://github.com/BogdanLyamzin">GitHub</a></p>
                         </div>
                     </div>
                 </div>
@@ -168,40 +162,20 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="../images/goit-students-photos/Andrii.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
+                            <h5 class="mt-4 font-weight-medium mb-0">Andrii</h5>
+                            <h6 class="subtitle">"New Born"</h6>
+                            <p>Senior Front-End-Developer</p>
+                            <p><a class="student-github link" href="https://github.com/BogdanLyamzin">GitHub</a></p>
                         </div>
                     </div>
                 </div>
                 <!-- Row -->
             </div>
-            <div class="col-lg-4 mb-4">
-                <!-- Row -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
-                    </div>
-                    <div class="col-md-12">
-                        <div class="pt-2">
-                            <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
-                            <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <p><a href="mailto:masha.gunko96@gmail.com"
-                                    class="student-email link">masha.gunko96@gmail.com </a></p>
-                            <p><a class="student-github link"
-                                    href="https://github.com/Mariia996">github-repozitories</a></p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Row -->
-            </div>
+
         </div>
 
     </div>
