--- a/src/sass/components/_modalSudents.scss
+++ b/src/sass/components/_modalSudents.scss
@@ -5,6 +5,37 @@
   font-weight: 300;
 }
 
+.row-container {
+  @include mobile-end {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @include tablet {
+    @include grid(150px, auto-fill);
+    grid-gap: 15px;
+  }
+}
+
+.pt-2 {
+  text-align: center;
+  padding: 10px;
+}
+
+.text-box {
+  @include flex(center, center);
+}
+
+.text-box a {
+  padding: 5px;
+}
+
+@include tablet {
+  // .col-lg-4 {
+  // }
+}
+
 .team3 h1,
 .team3 h2,
 .team3 h3,
@@ -28,9 +59,9 @@
   font-size: 13px;
 }
 
-.team3 ul {
-  margin-top: 30px;
-}
+// .team3 ul {
+//   margin-top: 30px;
+// }
 
 .team3 h5 {
   line-height: 22px;
@@ -51,9 +82,9 @@
   color: #316ce8;
 }
 
-.team3 .title {
-  margin: 30px 0 0 0;
-}
+// .team3 .title {
+//   margin: 30px 0 0 0;
+// }
 
 .team3 .subtitle {
   margin: 0 0 20px 0;
