--- a/src/sass/components/_error.scss
+++ b/src/sass/components/_error.scss
@@ -10,7 +10,7 @@
 .unavialable-page {
   color: $error-color;
   font-style: 30px;
-  width: 310px;
+  max-width: 280px;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 30px;
