Добавляет модальное окно команды

--- a/src/templates/modalStudents.hbs
+++ b/src/templates/modalStudents.hbs
@@ -17,16 +17,15 @@
                         <div class="pt-2">
                             <h5 class="mt-4 font-weight-medium mb-0">Mariia</h5>
                             <h6 class="subtitle">"Awesome Team Lead"</h6>
-                            <div class="text-box">
-                                <p><a href="mailto:masha.gunko96@gmail.com" class="student-email link">E-MAIL</a></p>
-                                <p><a class="student-github link" href="https://github.com/Mariia996">GitHub</a></p>
-                            </div>
+                            <p><a href="mailto:masha.gunko96@gmail.com"
+                                    class="student-email link">masha.gunko96@gmail.com</a></p>
+                            <p><a class="student-github link" href="https://github.com/Mariia996">GitHub</a></p>
                         </div>
                     </div>
                 </div>
-                <!-- Row -->
             </div>
-            <!-- column  -->
+            <!-- Row --
+        <!-- column  -->
             <!-- column  -->
             <div class="col-lg-4 mb-4">
                 <!-- Row -->
@@ -39,7 +38,8 @@
                             <h5 class="mt-4 font-weight-medium mb-0">Sasha</h5>
                             <h6 class="subtitle">"Need hugs"</h6>
                             <p><a href="mailto:protsenko.as@gmail.com"
-                                    class="student-email link">protsenko.as@gmail.com</a></p>
+                                    class="student-email link">protsenko.as@gmail.com</a>
+                            </p>
                             <p><a class="student-github link" href="https://github.com/SashaPro2021">GitHub</a></p>
                         </div>
                     </div>
@@ -58,8 +58,8 @@
                         <div class="pt-2">
                             <h5 class="mt-4 font-weight-medium mb-0">Marina</h5>
                             <h6 class="subtitle">"Local Storage Monster"</h6>
-                            <p><a href="mailto:marinacat2108@gmail.com"
-                                    class="student-email link">marinacat2108@gmail.com</a>
+                            <p><a href="mailto:karabutmarina03@gmail.com"
+                                    class="student-email link">karabutmarina03@gmail.com</a>
                             </p>
                             <p><a class="student-github link" href="https://github.com/MarinaKarabut">GitHub</a></p>
                         </div>
@@ -79,7 +79,8 @@
                             <h5 class="mt-4 font-weight-medium mb-0">Maks</h5>
                             <h6 class="subtitle">"Team Heart"</h6>
                             <p><a href="mailto:m.shipovskiy@gmail.com"
-                                    class="student-email link">m.shipovskiy@gmail.com</a></p>
+                                    class="student-email link">m.shipovskiy@gmail.com</a>
+                            </p>
                             <p><a class="student-github link" href="https://github.com/zurab5550">GitHub</a></p>
                         </div>
                     </div>
@@ -116,7 +117,8 @@
                             <h5 class="mt-4 font-weight-medium mb-0">Akbar</h5>
                             <h6 class="subtitle">"Pagination Guru"</h6>
                             <p><a href="mailto:k.akbar1101@gmail.com"
-                                    class="student-email link">k.akbar1101@gmail.com</a></p>
+                                    class="student-email link">k.akbar1101@gmail.com</a>
+                            </p>
                             <p><a class="student-github link" href="https://github.com/kadyrov11">GitHub</a></p>
                         </div>
                     </div>
@@ -134,7 +136,8 @@
                             <h5 class="mt-4 font-weight-medium mb-0">Danilo</h5>
                             <h6 class="subtitle">"Ronaldo"</h6>
                             <p><a href="mailto:danilka4412@gmail.com"
-                                    class="student-email link">danilka4412@gmail.com</a></p>
+                                    class="student-email link">danilka4412@gmail.com</a>
+                            </p>
                             <p><a class="student-github link" href="https://github.com/danielnedefo">GitHub</a></p>
                         </div>
                     </div>
@@ -159,7 +162,6 @@
                 <!-- Row -->
             </div>
             <div class="col-lg-4 mb-4">
-                <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
                         <img src="../images/goit-students-photos/Andrii.jpg" alt="wrapkit" class="img-fluid" />
@@ -169,7 +171,6 @@
                             <h5 class="mt-4 font-weight-medium mb-0">Andrii</h5>
                             <h6 class="subtitle">"New Born"</h6>
                             <p>Senior Front-End-Developer</p>
-                            <p><a class="student-github link" href="https://github.com/BogdanLyamzin">GitHub</a></p>
                         </div>
                     </div>
                 </div>
