--- a/src/sass/components/_modalSudents.scss
+++ b/src/sass/components/_modalSudents.scss
@@ -13,9 +13,18 @@
   }
 
   @include tablet {
-    @include grid(150px, auto-fill);
+    @include grid(200px, auto-fill);
     grid-gap: 15px;
   }
+}
+
+.student-email,
+.student-github {
+  font-weight: 400;
+}
+.mb-3 {
+  margin-bottom: 35px;
+  text-align: center;
 }
 
 .pt-2 {
@@ -23,17 +32,22 @@
   padding: 10px;
 }
 
-.text-box {
-  @include flex(center, center);
+.pt-2 a {
+  color: #3e4555;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.7);
+  }
 }
 
-.text-box a {
-  padding: 5px;
+.team3 {
+  width: 100%;
 }
 
-@include tablet {
-  // .col-lg-4 {
-  // }
+.img-fluid {
+  box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
 }
 
 .team3 h1,
@@ -54,9 +68,9 @@
 }
 
 .team3 .subtitle {
-  color: #8d97ad;
+  color: $accent-color;
   line-height: 24px;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .team3 h5 {
@@ -77,10 +91,6 @@
   transform: translate3d(0px, -5px, 0px);
   color: #316ce8;
 }
-
-// .team3 .title {
-//   margin: 30px 0 0 0;
-// }
 
 .team3 .subtitle {
   margin: 0 0 20px 0;
