Пофиксила пути команды

--- a/src/templates/modalStudents.hbs
+++ b/src/templates/modalStudents.hbs
@@ -11,7 +11,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Maria.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -31,7 +31,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Sasha.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Sasha.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -52,7 +52,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Marina.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Marina.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -72,7 +72,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Maks1.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Maks1.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -91,7 +91,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Fahriddin.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Fahriddin.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -110,7 +110,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Akbar.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Akbar.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -129,7 +129,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Hezalek.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Hezalek.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -148,7 +148,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Bogdan.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Bogdan.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
@@ -164,7 +164,7 @@
             <div class="col-lg-4 mb-4">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="../images/goit-students-photos/Andrii.jpg" alt="wrapkit" class="img-fluid" />
+                        <img src="./images/goit-students-photos/Andrii.jpg" alt="wrapkit" class="img-fluid" />
                     </div>
                     <div class="col-md-12">
                         <div class="pt-2">
