--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -3,7 +3,7 @@
     <div class="container">
         <nav class="header-nav">
             <div>
-                <a href="./index.html" class="header-icon">
+                <a href="/Filmoteka/" class="header-icon">
                     <svg class="icon-film" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -25,7 +25,7 @@
                             stroke-linejoin="round" />
                     </svg>
                 </a>
-                <a href="./index.html" class="logo header-logo">
+                <a href="/Filmoteka/" class="logo header-logo">
                     <span class="logo-text rubberBand">Filmoteka</span>
                 </a>
             </div>
@@ -33,7 +33,7 @@
             <div class="header-list-nav" id='main-nav'>
                 <ul class="list-nav">
                     <li class="list-nav-item">
-                        <a class="list-item-link active" href='/home'>Home</a>
+                        <a class="list-item-link active" href='/Filmoteka/'>Home</a>
                     </li>
                     <li class="list-nav-item">
                         <a class="list-item-link" href='/my-library'>My Library</a>
